syntax = "proto3";


package usuario;

option csharp_namespace = "EntryPoints.Grpc.Dtos.Protos";

service UsuarioService {
  rpc SignUp (SignUpRequest) returns (Response);
  rpc SignIn (SignInRequest) returns (Response);
}

message SignUpRequest {
  string Nombre = 2;
  string Correo = 3;
  string Clave = 4;
}
message SignInRequest {
  string Correo = 3;
  string Clave = 4;
}

message Response {
  string Message = 1;
  string Token = 2;
  repeated string Error = 3;
}
